# solids

./: .gitignore  Cargo.toml  README.md
src/: main.rs  platonic_solids.rs  relax.rs  relax_solid.rs  solid.rs  triangulate.rs  view.rs
