[package]
name = "solids"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = "0.34.1"
image = "0.25.9"
ndarray = "0.17.1"
rand = "0.9.2"
strum = { version = "0.27", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
pprof = { version = "0.13", features = ["flamegraph"] }
